fix: Stop the desktop navigation items from wrapping

--- a/wordpress/wp-content/themes/astra-child/assets/css/components/_gp-site-header.scss
+++ b/wordpress/wp-content/themes/astra-child/assets/css/components/_gp-site-header.scss
@@ -109,6 +109,7 @@
       flex: 0;
       margin: 0 15px;
       list-style: none;
+      white-space: nowrap;
 
       @media (max-width: $breakpointTablet) {
         margin: 0;
